--- a/sass/components/table.sass
+++ b/sass/components/table.sass
@@ -9,8 +9,6 @@ table
 
     // Scroll on overflow
     display: block
-    max-width: -moz-fit-content
-    max-width: fit-content
     margin: 0 auto
     overflow-x: auto
     white-space: nowrap
