--- a/sass/main.sass
+++ b/sass/main.sass
@@ -17,12 +17,13 @@ body
 .page
     display: flex
     flex-direction: column
-    width: 100%
+    overflow-x: hidden
     max-width: 600px
     margin: 0 auto
 
 main
     padding: 0 2em
+    overflow-x: hidden
 
 h2, h3, h4
     display: block
